[gd_scene load_steps=24 format=2]

[ext_resource path="res://entities/Player/autorunwade/playerautorun2.png" type="Texture" id=1]
[ext_resource path="res://entities/Player/autorunwade/playerautorun1.png" type="Texture" id=2]
[ext_resource path="res://entities/Player/autorunwade/playerautorun3.png" type="Texture" id=3]
[ext_resource path="res://entities/Player/autorunwade/playerautorun4.png" type="Texture" id=4]
[ext_resource path="res://entities/Player/autorunwade/playerautorun5.png" type="Texture" id=5]
[ext_resource path="res://entities/Player/autorunwade/playerautorun6.png" type="Texture" id=6]
[ext_resource path="res://entities/Player/autorunwade/playerautorun7.png" type="Texture" id=7]
[ext_resource path="res://entities/Player/autorunwade/PlayerAutoRun.gd" type="Script" id=8]
[ext_resource path="res://audio/sound effects/Jump.wav" type="AudioStream" id=9]
[ext_resource path="res://engine/Collisions/Hurtbox.tscn" type="PackedScene" id=10]
[ext_resource path="res://entities/Player/player stats wade/PlayerStats.tscn" type="PackedScene" id=11]
[ext_resource path="res://engine/Animations/Hit.tres" type="Animation" id=12]
[ext_resource path="res://audio/sound effects/hit/GotHitSound.tscn" type="PackedScene" id=13]
[ext_resource path="res://audio/sound effects/coin/BottleSound.tscn" type="PackedScene" id=14]
[ext_resource path="res://entities/Assets/Explosion/explosion1.png" type="Texture" id=15]
[ext_resource path="res://entities/Assets/Explosion/explosion4.png" type="Texture" id=16]
[ext_resource path="res://entities/Assets/Explosion/explosion6.png" type="Texture" id=17]
[ext_resource path="res://entities/Assets/Explosion/explosion3.png" type="Texture" id=18]
[ext_resource path="res://entities/Assets/Explosion/explosion5.png" type="Texture" id=19]
[ext_resource path="res://entities/Assets/Explosion/explosion2.png" type="Texture" id=20]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 1 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 20 ), ExtResource( 18 ), ExtResource( 16 ), ExtResource( 19 ), ExtResource( 17 ) ],
"loop": true,
"name": "boom",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 22.9448

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 23.7886 )

[node name="PlayerAutoRun" type="KinematicBody2D"]
collision_mask = 530
script = ExtResource( 8 )
MAX_SPEED = 700
ACCELERATION = 90
JUMP_HEIGHT = -800
GRAVITY = 40

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
speed_scale = 2.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.250336, 7.76064 )
shape = SubResource( 2 )

[node name="Hurtbox" parent="." instance=ExtResource( 10 )]

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, 5.27041 )
shape = SubResource( 3 )

[node name="RayCast2D" type="RayCast2D" parent="."]
scale = Vector2( 1, 0.8 )

[node name="PlayerStats" parent="." instance=ExtResource( 11 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Hit = ExtResource( 12 )

[node name="JumpSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )

[node name="GotHitSound" parent="." instance=ExtResource( 13 )]

[node name="BottleSound" parent="." instance=ExtResource( 14 )]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]

[editable path="Hurtbox"]
